--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 #face-mxnet
-
-the common process method include symbol, loss, sample of face.
-
-To be contined.
+###the common process method include symbol, loss, sample of face.
+###To be contined.
